# Alpha-To-Beta

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt
alpha-to-beta-android/: .classpath  .project  (+2 more)
alpha-to-beta/src/: CMakeLists.txt  main.cpp
alpha-to-beta/src/Components/: JumpBehaviour.cpp  JumpBehaviour.h
alpha-to-beta/src/Events/: JumpEvent.cpp  JumpEvent.h  JumpListener.cpp  JumpListener.h  Script.cpp  Script.h
alpha-to-beta/src/Screens/: GameManager.cpp  GameManager.h  GameScreen.cpp  GameScreen.h
alpha-to-beta/src/Systems/: GameManager.cpp  GameManager.h  PlayerInputSystem.cpp  PlayerInputSystem.h
alpha-to-beta/src/ashley/core/: Engine.java  Entity.java  Family.java  PooledEngine.java
alpha-to-beta/src/com/debugstudios/alphatobeta/: AlphaToBeta.java  Assets.java  PlayScreen.java  PlayerFactory.java  PlayerInputHandler.java  World.java
alpha-to-beta/src/com/debugstudios/alphatobeta/assets/: MapLoader.java  MapParser.java  ObstacleLoader.java  ObstacleLoaderTest.java  PlayerLoader.java
alpha-to-beta/src/com/debugstudios/alphatobeta/components/: PlayerInputComponent.java
alpha-to-beta/src/com/debugstudios/alphatobeta/framework/: Game.java
alpha-to-beta/src/com/debugstudios/alphatobeta/input/: PlayerInputHandler.java  PlayerOuyaHandler.java  PlayerTouchHandler.java
alpha-to-beta/src/com/debugstudios/alphatobeta/models/: Player.java
alpha-to-beta/src/com/debugstudios/alphatobeta/obstacles/: Obstacle.java  ObstacleBuilder.java  ObstacleFactory.java
alpha-to-beta/src/com/debugstudios/alphatobeta/players/: HumanPlayer.java  Player.java
alpha-to-beta/src/com/debugstudios/alphatobeta/renderers/: WorldDebugRenderer.java  WorldRenderer.java
alpha-to-beta/src/com/debugstudios/alphatobeta/screens/: PlayScreen.java
alpha-to-beta/src/com/debugstudios/alphatobeta/systems/: PlayerInputSystem.java
alpha-to-beta/src/com/debugstudios/alphatobeta/utils/: Debug.java  SpeedRegionPair.java
alpha-to-beta/src/com/debugstudios/alphatobeta/views/: WorldDebugRenderer.java  WorldRenderer.java
alpha-to-beta/src/com/debugstudios/framework/: Game.java  OverlapTester.java
alpha-to-beta/src/com/debugstudios/framework/components/: AIScript.java  AbstractAnimation.java  AnimatedRenderable.java  Camera.java  CameraComponent.java  Movement.java  ParsedComponent.java  Physics.java  Renderable.java  Slowdown.java  Transform.java
alpha-to-beta/src/com/debugstudios/framework/datastructures/: QuadTree.java  QuadTreeTest.java  SpatialHashGrid.java
alpha-to-beta/src/com/debugstudios/framework/entities/: DynamicEntity.java  Entity.java  EntityFactory.java  ParsedEntity.java
alpha-to-beta/src/com/debugstudios/framework/events/: BaseEventData.java  IEventData.java  IEventManager.java
alpha-to-beta/src/com/debugstudios/framework/gameobjects/: DynamicEntity.java  Entity.java  EntityFactory.java
alpha-to-beta/src/com/debugstudios/framework/graphics/: AnimUtils.java  Camera.java  DebugRenderer.java
alpha-to-beta/src/com/debugstudios/framework/listeners/: RenderableDisposer.java
core/src/: BaseGameManager.cpp  BaseGameManager.h  CMakeLists.txt  Game.cpp  Game.h  SFMLPtrDef.h
core/src/Components/: BaseAnimation.cpp  BaseAnimation.h  BaseScriptComponent.cpp  BaseScriptComponent.h  CameraFollower.cpp  CameraFollower.h  DynamicBody.cpp  DynamicBody.h  IRenderable.h  JumpBehaviour.cpp  JumpBehaviour.h  ParsedComponent.h  Physics.cpp  Physics.h  PlayerInput.cpp  PlayerInput.h  Renderable.cpp  Renderable.h  StaticBody.cpp  StaticBody.h  Transform.cpp  Transform.h
core/src/DataStructures/: ConcurrentQueue.cpp  ConcurrentQueue.h  QuadTree.cpp
core/src/Entities/: EntityFactory.cpp  EntityFactory.h  Level.cpp  Level.h  Utils.cpp  Utils.h  WorldLocator.h
core/src/Events/: CollisionEvents.cpp  CollisionEvents.h  EventData.h  EventManager.cpp  EventManager.h  EventManagerImpl.cpp  EventManagerImpl.h
core/src/Graphics/: Animation.cpp  Animation.h  Camera2D.cpp  Camera2D.h  ShapeBatch.h  SpriteBatch.cpp  SpriteBatch.h  TextureRegion.cpp  TextureRegion.h  Vertices.cpp  Vertices.h
core/src/Input/: InputLocator.cpp  InputLocator.h  InputProcessor.h
core/src/Lua/: LuaStateManager.cpp  LuaStateManager.h  ScriptEvent.cpp  ScriptEvent.h  ScriptExports.cpp  ScriptExports.h  ScriptSystem.cpp  ScriptSystem.h  Utils.h
core/src/Lua/exports/: EntityExports.cpp  EntityExports.h  EventExports.cpp  EventExports.h  InputExports.cpp  InputExports.h  LoggerExports.cpp  LoggerExports.h  MathExports.cpp  MathExports.h
core/src/Maps/: MapLoader.cpp  MapLoader.cpp.autosave  MapLoader.h
core/src/Math/: Vector.h
core/src/Memory/: loose_ptr.h
core/src/Physics/: Box2DRenderer.cpp  Box2DRenderer.h  CollisionDispatcher.cpp  CollisionDispatcher.h  CollisionMasks.cpp  CollisionMasks.h  PhysicsLocator.cpp  PhysicsLocator.h
core/src/Resources/: GenericObjectFactory.h  Locator.h  ResourceDef.h  ResourceHolder.h  ResourceHolderDef.h  SharedResourceHolder.h  SingletonResourceHolder.h  SingletonTextureHolder.h  XMLoader.cpp  XMLoader.h
core/src/Screens/: IScreen.h  ScreenManager.cpp  ScreenManager.h
core/src/Systems/: AnimationSystem.cpp  AnimationSystem.h  BaseRenderSystem.cpp  BaseRenderSystem.h  CameraFollowingSystem.cpp  CameraFollowingSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SystemManager.h  WorldManager.cpp  WorldManager.h
core/src/Utils/: FileSystem.cpp  FileSystem.h  Helpers.h  Logger.cpp  Logger.h  QuadTree.cpp  QuadTree.h  String.cpp  String.h
dependencies/luaplus/: CMakeLists.txt  LuaFunction.h  LuaPlusCD.h  LuaState_DumpObject.cpp
dependencies/luaplus/src/: lstrlib.c  luaconf.h  lvm.c
dependencies/tmx-parser/: CMakeLists.txt
dependencies/tmx-parser/.svn/: wc.db
dependencies/tmx-parser/TmxParser/: TmxEllipse.cpp  TmxImage.cpp  TmxImageLayer.cpp  TmxImageLayer.h  TmxLayer.cpp  TmxMap.cpp  TmxObject.cpp  TmxObjectGroup.cpp  TmxPolygon.cpp  TmxPolyline.cpp  TmxPropertySet.cpp  TmxTile.cpp  TmxTileset.cpp
editor/src/: CMakeLists.txt  main.cpp
editor/src/QtWidgets/: QSFMLCanvas.cpp  QSFMLCanvas.h
(+84 files in other folders)
